add: 모든 사용자를 삭제하는 기능추가
