# server/docs/swagger.json
@@ -69,6 +69,30 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "모든 사용자 정보를 삭제합니다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "모든 사용자 삭제",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrResponse"
+                        }
+                    }
+                }
             }
         },
         "/{id}": {
